Add Arabic 'Return to first page' button

--- a/index.html
+++ b/index.html
@@ -343,6 +343,7 @@
                 <div id="page-content"></div>
                 <div class="navigation-controls">
                     <button id="back-to-titles">العودة للعناوين</button>
+                    <button id="go-to-first-page">العودة للصفحة الأولى</button>
                     <span id="page-counter"></span>
                     <button id="next-page-btn">الصفحة التالية</button>
                 </div>
